--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="jquery.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
         <style>
       		body {
         	font-family: 'Montserrat', serif;
