--- a/fr.html
+++ b/fr.html
@@ -4,11 +4,9 @@
         <title>J'ai besoin de...</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="jquery.js" type="text/javascript"></script>
-        <script src="script_fr.js" type="text/javascript"></script>
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
         <style>
       		body {
         	font-family: 'Montserrat', serif;
@@ -43,11 +41,13 @@
             </div>
             
             <div class="credit">
-            	par gil browdy && <a href="http://www.vinnyfrancois.com">vinny francois</a></br>
+            	par <a href="http://gil.browdy.net">gil browdy</a> && <a href="http://www.vinnyfrancois.com">vinny francois</a></br>
             	traduction par zoé drujon && hugo vacher</br>
             </div>
             	<a href="index.html" class="lang">en</a> • <a href="fr.html" class="currentlang">fr</a>
         </div>
+		<script src="base.js" type="text/javascript"></script>
+		<script src="script_fr.js" type="text/javascript"></script>
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
