--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <title>Can I Get A</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="jquery.js" type="text/javascript"></script>
-        <script src="script.js" type="text/javascript"></script>
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
@@ -16,8 +14,6 @@
         	color: #243B39;
       		}
     	</style>
- 
-    
     </head>
     <body>
         <div class="container">
@@ -47,8 +43,11 @@
             </div>
             	<a href="index.html" class="lang">en</a> • <a href="fr.html" class="currentlang">fr</a>
 
-        </div>
         
+		</div>
+		<script src="base.js" type="text/javascript"></script>
+		<script src="script.js" type="text/javascript"></script>
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
