add greek support

--- a/fr.html
+++ b/fr.html
@@ -44,7 +44,7 @@
             	par <a href="http://gil.browdy.net">gil browdy</a> && <a href="http://www.vinnyfrancois.com">vinny francois</a></br>
             	traduction par zoé drujon && hugo vacher</br>
             </div>
-            	<a href="index.html" class="lang">en</a> • <a href="fr.html" class="currentlang">fr</a>
+			<a href="index.html" class="en">en</a> • <a href="fr.html" class="fr">fr</a> • <a href="gr.html" class="gr">gr</a>
         </div>
 		<script src="base.js" type="text/javascript"></script>
 		<script src="script_fr.js" type="text/javascript"></script>
