--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="credit">
 				by <a href="http://gil.browdy.net">gil browdy</a> && <a href="http://www.vinnyfrancois.com">vinny francois</a>
             </div>
-            	<a href="index.html" class="lang">en</a> • <a href="fr.html" class="currentlang">fr</a>
+            	<a href="index.html" class="en">en</a> • <a href="fr.html" class="fr">fr</a> • <a href="gr.html" class="gr">gr</a>
 
         
 		</div>
