clean up css, links, colors and greek fonts

--- a/fr.html
+++ b/fr.html
@@ -7,15 +7,6 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
-        <style>
-      		body {
-        	font-family: 'Montserrat', serif;
-        	font-size: 20px;
-        	color: #243B39;
-      		}
-    	</style>
- 
-    
     </head>
     <body>
         <div class="container">
@@ -26,13 +17,13 @@
             	suggestions d'impro en un clic
 			</div>
 			<div class="buttonRow">
-				<button class="location" style="background-color: #FBEB9A">
+				<button class="location">
 					Lieu
 					</button><br/>
-				<button class="relationship" style="background-color: #B4FCFB">
+				<button class="relationship">
 					Relation
 					</button><br/>
-				<button class="word" style="background-color: #DEB5D4">
+				<button class="word">
 					Mot
 					</button><br/>
 			</div> 
@@ -41,7 +32,7 @@
             </div>
             
             <div class="credit">
-            	par <a href="http://gil.browdy.net">gil browdy</a> && <a href="http://www.vinnyfrancois.com">vinny francois</a></br>
+            	par <a href="http://gil.browdy.net" target="__blank">gil browdy</a> && <a href="http://www.vinnyfrancois.com" target="__blank">vinny francois</a></br>
             	traduction par zoé drujon && hugo vacher</br>
             </div>
 			<a href="index.html" class="en">en</a> • <a href="fr.html" class="fr">fr</a> • <a href="gr.html" class="gr">gr</a>
