--- a/gr.html
+++ b/gr.html
@@ -5,17 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
-        <style>
-      		body {
-        	font-family: 'Montserrat', serif;
-        	font-size: 20px;
-        	color: #243B39;
-      		}
-    	</style>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
     </head>
-    <body>
+    <body class="greek">
         <div class="container">
             <div class="title">
             	Μπορείς Να Μου Δώσεις Μία...
@@ -24,13 +17,13 @@
             	Εμπνεύσεις για σκηνές improv με το πάτημα ενός κουμπιού
 			</div>
 			<div class="buttonRow">
-				<button class="location" style="background-color: #FBEB9A">
+				<button class="location greek">
 					Τοποθεσία
 					</button><br/>
-				<button class="relationship" style="background-color: #B4FCFB">
+				<button class="relationship greek">
 					Σχέση
 					</button><br/>
-				<button class="word" style="background-color: #DEB5D4">
+				<button class="word greek">
 					Λέξη
 					</button><br/>
 			</div> 
@@ -39,8 +32,8 @@
             </div>
             
             <div class="credit">
-                από τον <a href="http://gil.browdy.net">gil browdy</a> && τον <a href="http://www.vinnyfrancois.com">vinny francois</a><br/>
-                Μετάφραση στα Ελληνικά: <a href="fb.com/heraklionimprov">Μιχάλης Παναγιωτάκης</a><br/>
+                από τον <a href="http://gil.browdy.net" target="__blank">gil browdy</a> && τον <a href="http://www.vinnyfrancois.com" target="__blank">vinny francois</a><br/>
+                Μετάφραση στα Ελληνικά: <a href="http://fb.com/heraklionimprov" target="__blank">Μιχάλης Παναγιωτάκης</a><br/>
             </div>
             	<a href="index.html" class="en">en</a> • <a href="fr.html" class="fr">fr</a> • <a href="gr.html" class="gr">gr</a>
 
