--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
-        <style>
-      		body {
-        	font-family: 'Montserrat', serif;
-        	font-size: 20px;
-        	color: #243B39;
-      		}
-    	</style>
     </head>
     <body>
         <div class="container">
@@ -24,13 +17,13 @@
             	improv suggestions at the touch of a button
 			</div>
 			<div class="buttonRow">
-				<button class="location" style="background-color: #FBEB9A">
+				<button class="location">
 					Location
 					</button><br/>
-				<button class="relationship" style="background-color: #B4FCFB">
+				<button class="relationship">
 					Relationship
 					</button><br/>
-				<button class="word" style="background-color: #DEB5D4">
+				<button class="word">
 					Word
 					</button><br/>
 			</div> 
@@ -39,7 +32,7 @@
             </div>
             
             <div class="credit">
-				by <a href="http://gil.browdy.net">gil browdy</a> && <a href="http://www.vinnyfrancois.com">vinny francois</a>
+				by <a href="http://gil.browdy.net" target="__blank">gil browdy</a> && <a href="http://www.vinnyfrancois.com" target="__blank">vinny francois</a>
             </div>
             	<a href="index.html" class="en">en</a> • <a href="fr.html" class="fr">fr</a> • <a href="gr.html" class="gr">gr</a>
 
