change greek suggestion font

--- a/gr.html
+++ b/gr.html
@@ -28,7 +28,7 @@
 					</button><br/>
 			</div> 
 
-            <div class="suggestion"> 
+            <div class="suggestion greek"> 
             </div>
             
             <div class="credit">
