Change Danisk abbreviation from dn to dk

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Can I Get A</title>
+        <link rel="icon" type="image/svg+xml" href="favicon.svg">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -44,7 +45,7 @@
             	<a href="#" data-lang="en" class="en">en</a> •
             	<a href="#" data-lang="fr" class="fr">fr</a> •
             	<a href="#" data-lang="gr" class="gr">gr</a> •
-            	<a href="#" data-lang="dn" class="dn">dn</a>
+            	<a href="#" data-lang="dk" class="dk">dk</a>
             </div>
 
 		</div>
@@ -67,7 +68,7 @@
 		<script src="script_en.js" type="text/javascript"></script>
 		<script src="script_fr.js" type="text/javascript"></script>
 		<script src="script_gr.js" type="text/javascript"></script>
-		<script src="script_dn.js" type="text/javascript"></script>
+		<script src="script_dk.js" type="text/javascript"></script>
 
 		<!-- Initialize app -->
 		<script>
